# myCustomGEMM

./: .gitignore  CMakeLists.txt  README.md  research.py
src/: clGEMM.cpp  common.h  main.cpp  settings.h
